docker/staging/app.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: staging
spec:
  # GCE Ingress doesn't work with ClusterIP type services.
  type: LoadBalancer
  selector:
    app: app
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: staging
spec:
  selector:
    matchLabels:
      app: app
  replicas: 1 
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app
          image: captain:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 500m
              memory: 256Mi
            requests:
              cpu: 500m
              memory: 256Mi
